fix payment margin on mobile devices

--- a/view/frontend/web/css/clean-checkout-m.css
+++ b/view/frontend/web/css/clean-checkout-m.css
@@ -162,3 +162,7 @@
 .social-login i {
     margin-right: 5px;
 }
+
+.checkout-payment-method .payment-methods {
+    margin: 0px;
+}
